Removed empty TODO message
